check contest added

--- a/views/allprob.handlebars
+++ b/views/allprob.handlebars
@@ -46,7 +46,7 @@
                 
                 var x = $('#allprobtable');
                 x.html('');
-                // console.log(res.obj);
+                console.log(res.obj);
                 res.obj.forEach((row) => {
                     x.append('\
                             <tr>\
