--- a/views/contests.handlebars
+++ b/views/contests.handlebars
@@ -52,10 +52,10 @@
                 var cpc = res.CPName || [];
                 var crd = res.crdur || [];
                 var cud = res.cudur || [];
-                var ced = res.cedur || [];
+                var ced = res.cpdur || [];
                 var crdt = res.CRDate || [];
                 var cudt = res.CUDate || [];
-                var cedt = res.CEDate || [];
+                var cedt = res.CPDate || [];
 
 				cr.html('');
                 cu.html('');
