--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,7 +45,7 @@
         </a>
       </div>
       <div class="col-sm-6">
-        <a href = "/contests" style="color:#fff;">
+        <a href = "/users/leaderboard/1" style="color:#fff;">
           <div class = "card bg-dark text-center">
             <div class="card-body">
               Leaderboard
