--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,3 +150,28 @@ a:hover {
 .contest-page tr td {
     font-size: 15px;
 }
+
+.performance tr td {
+    text-align: center;
+}
+
+.performance tr th {
+    text-align: center;
+}
+
+.performance tr {
+    height: 40px;
+}
+
+.performance {
+    width: 90%;
+}
+
+.tableleaderboard tr td {
+    text-align: center;
+    height: 40px;
+}
+
+.tableleaderboard tr th {
+    text-align: center;
+}
