--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -41,9 +41,8 @@
 
     </div>
 
-    <center class ="footer">
-      Copyright &#169; IIIT Pune 2020-2030<br />
-      A Project by Sarthak Gupta, Piyush Gupta and Gaurav Lathwal
+    <center class ="footer" style="color:#afafaf">
+     Copyright &#169; IIIT Pune 2020-2030<br /> A Project by <span style="color:white;font-size: 15px;">Sarthak Gupta</span> , <span style="color:white;font-size: 15px;">Piyush Gupta</span> and <span style="color:white;font-size: 15px;">Gaurav Lathwal</span>
     </center>
 
     
