--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   #editor {
     margin: 0;
     width: 100%;
-    height: 45em;
+    height: 40em;
     margin-top: 5px;
     font-size: 14px;
 }
@@ -67,6 +67,16 @@
 
         </div>
         <br />
+        <div class = "row">
+          <div id = "mis" class = "col-sm-3" style = "text-align: left;">
+            <b>MIS: </b>
+          </div>
+          <div id = "misvalue" class = "col-sm-3" style = "text-align: left;">
+            {{mis}}
+          </div>
+
+        </div>
+        <br />
         
       </div>
       <div class = "col-sm-2" style = "text-align: right;">
@@ -100,29 +110,39 @@
         </button>
       </div>
     </div>
-  </div>
-  <div id="edit" style="margin:20px;">
+    <div id="edit" style="margin:20px;">
   </div>
   <input type="hidden" name="code" id="code" value="{{code}}">
   <input type="hidden" name="lang" id="lang" value="{{flang}}">
   <div id="demo"></div>
+  </div>
+ 
+  
 
   <center>
     <table class="performance" border="1px solid #000">
-      <tr>
-        <th>Contest Code</th>
-        <th>Rank</th>
-        <th>oldrating</th>
-        <th>Newrating</th>
-      </tr>
-      {{#each ratingdata}}
-        <td>{{this.code}}</td>
-        <td>{{this.rank}}</td>
-        <td>{{this.oldrating}}</td>
-        <td>{{this.newrating}}</td>
-      {{/each}}
+      {{#if participation}}
+        <tr>
+          <th>Contest Code</th>
+          <th>Rank</th>
+          <th>oldrating</th>
+          <th>Newrating</th>
+        </tr>
+      
+        {{#each ratingdata}}
+          <td>{{this.code}}</td>
+          <td>{{this.rank}}</td>
+          <td>{{this.oldrating}}</td>
+          <td>{{this.newrating}}</td>
+        {{/each}}
+      {{else}}
+        <br />
+        <br />
+        No Contest Participation data
+      {{/if}}
     </table>
   </center>
+   
 
 </div>
 
