--- a/views/contests.handlebars
+++ b/views/contests.handlebars
@@ -64,7 +64,10 @@
                 if(crc.length>0){
                     var x = '';    
                     for(let i=0;i<crc.length;i++){
-                        x+=('<tr><td class="text-center" width="10%">'+Number(i+1)+'</td><td class="text-center" width="40%"><button type="submit" name = "'+crc[i]+'" value = "'+crc[i]+'">'+crc[i]+'</button></td><td>'+crd[i]+'</td><td>'+crdt[i]+'</td><td class="text-center" width="20%">Running</td></tr>');
+                        var date = crdt[i].split('T')[0];
+                        var time = crdt[i].split('T')[1].split('.')[0];
+                        
+                        x+=('<tr><td class="text-center" width="10%">'+Number(i+1)+'</td><td class="text-center" width="40%"><button type="submit" name = "'+crc[i]+'" value = "'+crc[i]+'">'+crc[i]+'</button></td><td>'+crd[i]+'</td><td>'+date+'<br />'+time+'</td><td class="text-center" width="20%">Running</td></tr>');
                     }
                     cr.append('<table class="contest-page" width="100%" border="1px solid black"><tr><th class="text-center" width="10%">S. No.</th><th class="text-center" width="40%">Name</th><th width="10%">Duration</th><th>Date</th><th class="text-center" width="20%">Status</th></tr>' + x + '</table>');
                     
@@ -75,7 +78,10 @@
                 if(cuc.length>0){
                     var x = '';    
                     for(let i=0;i<cuc.length;i++){
-                        x+=('<tr><td class="text-center" width="10%">'+Number(i+1)+'</td><td class="text-center" width="40%"><button type="submit" name = "'+cuc[i]+'" value = "'+cuc[i]+'">'+cuc[i]+'</button></td><td>'+cud[i]+'</td><td>'+cudt[i]+'</td><td class="text-center" width="20%"></td></tr>');
+                        var date = crdt[i].split('T')[0];
+                        var time = crdt[i].split('T')[1].split('.')[0];
+                        
+                        x+=('<tr><td class="text-center" width="10%">'+Number(i+1)+'</td><td class="text-center" width="40%"><button type="submit" name = "'+cuc[i]+'" value = "'+cuc[i]+'">'+cuc[i]+'</button></td><td>'+cud[i]+'</td><td>'+date+'<br />'+time+'</td><td class="text-center" width="20%">Upcoming</td></tr>');
                     }
                     cu.append('<table class="contest-page" width="100%" border="1px solid black"><tr><th class="text-center" width="10%">S. No.</th><th class="text-center" width="40%">Name</th><th width="10%">Duration</th><th>Date</th><th class="text-center" width="20%">Status</th></tr>' + x + '</table>');
                 } else {
@@ -85,9 +91,12 @@
                 if(cpc.length>0){
                     var x = '';    
                     for(let i=0;i<cpc.length;i++){
-                        x+=('<tr><td class="text-center" width="10%">'+i+1+'</td><td class="text-center" width="40%"><button type="submit" name = "'+cpc[i]+'" value = "'+cpc[i]+'">'+cpc[i]+'</button></td><td>'+ced[i]+'</td><td>'+cedt[i]+'</td><td class="text-center" width="20%">Ended</td></tr>');
+                        
+                        var date = crdt[i].split('T')[0];
+                        var time = crdt[i].split('T')[1].split('.')[0];
+                        x+=('<tr><td class="text-center" width="10%">'+Number(i+1)+'</td><td class="text-center" width="40%"><button type="submit" name = "'+cpc[i]+'" value = "'+cpc[i]+'">'+cpc[i]+'</button></td><td>'+ced[i]+'</td><td>'+date+'<br />'+time+'</td><td class="text-center" width="20%">Ended</td></tr>');
                     }
-                    cp.append('<table class="contest-page" width="100%" border="1px solid black"><tr><th class="text-center" width="20%">S. No.</th><th class="text-center" class="text-center" width="40%">Name</th><th width="10%">Duration</th><th>Date</th><th class="text-center" width="20%">Status</th></tr>' + x + '</table>');
+                    cp.append('<table class="contest-page" width="100%" border="1px solid black"><tr><th class="text-center" width="10%">S. No.</th><th class="text-center" class="text-center" width="40%">Name</th><th width="10%">Duration</th><th>Date</th><th class="text-center" width="20%">Status</th></tr>' + x + '</table>');
                 } else {
                     cp.append("No contests available");
                 }
