--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -14,10 +14,12 @@
       <ul class="navbar-nav mr-auto">
         {{#if isAuthenticated}}
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/users/report">Report Plag</a></li>
           <li class="nav-item"><a class="nav-link" href="/users/dashboard">Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
         {{else}}
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/users/report">Report Plag</a></li>
           <li class="nav-item"><a class="nav-link" href="/users/register">Sign Up</a></li>
           <li class="nav-item"><a class="nav-link" href="/users/login">Sign In</a></li>        {{/if}}
       </ul>
