--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -24,12 +24,13 @@
         <form action="https://iiitp-blog.herokuapp.com/login" method="POST">
           <input type="text" hidden value={{email}} name="email">
           <input type="text" hidden value={{password}} name="password">
-          <div class = "card bg-dark text-center">
-            <div class="card-body">
-            
-              <button type="submit" style="color:white;text-decoration:none;"> Discussion</button>
+          <button type="submit" style="color:white;text-decoration:none;width:105%;">
+            <div class = "card bg-dark text-center">
+              <div class="card-body">
+                Discussion
+              </div>
             </div>
-          </div>
+          </button>
         </form>
         </div>
       </div>
