--- a/src/views/notFound.handlebars
+++ b/src/views/notFound.handlebars
@@ -1,2 +1,8 @@
 
-Page is not available
+<div class="container" style="width:100%">
+    <div class="row" style="width:100%">
+        <div class="col-sm-12 display-4 text-center" style="color:grey;margin-top:30%">
+            Page not found
+        </div>
+    </div>
+</div>
