Blog card added

--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -91,7 +91,7 @@
 
   <div class="container" style="margin-top:20px">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <a href = "/users/submissions/{{username}}/submissions/1" style="color:#fff;">
           <div class = "card text-center">
             <div class="card-body">
@@ -100,7 +100,16 @@
           </div>
         </a>
       </div>
-      <div id="ledit" class = "col-sm-6" style = "text-align: right;">
+      <div class="col-sm-4">
+        <a href = "https://iiitp-blog.herokuapp.com/userblog/{{username}}" style="color:#fff;">
+          <div class = "card text-center">
+            <div class="card-body">
+              Blogs
+            </div>
+          </div>
+        </a>
+      </div>
+      <div id="ledit" class = "col-sm-4" style = "text-align: right;">
         <button id="tedit" onclick="edit()" type="submit" style="color:#fff;width:100%;text-decoration:none;">
           <div class = "card bg-dark text-center">
             <div class="card-body">
