--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -53,17 +53,26 @@
         <br />
         <br />
         <div class="container" style="margin-top:20px">
-            <div class="row">
-                <div class="col-sm-12">
-                    <a href = "/users/submissions/{{username}}/submissions/1" style="color:#fff;">
-                        <div class = "card text-center">
-                            <div class="card-body">
-                                Submissions
-                            </div>
-                        </div>
-                    </a>
+          <div class="row">
+            <div class="col-sm-6">
+              <a href = "/users/submissions/{{username}}/submissions/1" style="color:#fff;">
+                <div class = "card text-center">
+                  <div class="card-body">
+                    Submissions
+                  </div>
                 </div>
+              </a>
             </div>
+            <div class="col-sm-6">
+              <a href = "https://iiitp-blog.herokuapp.com/userblog/{{username}}" style="color:#fff;">
+                <div class = "card text-center">
+                  <div class="card-body">
+                    Blogs
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
     </center>
 
