--- a/src/views/usersubmission.handlebars
+++ b/src/views/usersubmission.handlebars
@@ -44,10 +44,7 @@ Code:
 <!-- load ace modelist extension -->
 <script src="/ace/src/ext-modelist.js"></script>
 <script>
-    var editor = ace.edit("editor", {
-        autoScrollEditorIntoView: true,
-        maxLines:50
-    });
+    var editor = ace.edit("editor");
     editor.renderer.setScrollMargin(10, 10, 10, 10);
     editor.setTheme("ace/theme/xcode");
     editor.setShowPrintMargin(false);
