--- a/src/views/usersubmission.handlebars
+++ b/src/views/usersubmission.handlebars
@@ -44,7 +44,11 @@ Code:
 <!-- load ace modelist extension -->
 <script src="/ace/src/ext-modelist.js"></script>
 <script>
-    var editor = ace.edit("editor");
+    var editor = ace.edit("editor", {
+        autoScrollEditorIntoView: true,
+        maxLines:500
+    });
+    editor.renderer.setScrollMargin(10, 10, 10, 10);
     editor.setTheme("ace/theme/xcode");
     editor.setShowPrintMargin(false);
     editor.session.setMode("ace/mode/c_cpp");
