--- a/src/views/partials/navcontest.handlebars
+++ b/src/views/partials/navcontest.handlebars
@@ -4,7 +4,7 @@
     }
 </style>
 
-<a class="navca" href="/contests/quespage">Problems</a>
+<a class="navca" href="/contests/contest/{{CCode}}/quespage">Problems</a>
 {{#if isAuthenticated}}
     <a class="navca" href="/users/submissions/{{user}}/submissions/1">Submissions</a>
 {{/if}}
