--- a/src/views/prob.handlebars
+++ b/src/views/prob.handlebars
@@ -36,7 +36,7 @@
 			<br />
 		</div>
 		<div class="col-sm-3 text-center align-items-start text-dark">
-			<form action="/contests/quespage/prob/{{CPCode}}" method="POST">
+			<form action="/contests/contest/{{CCode}}/quespage/prob/{{CPCode}}" method="POST">
 				<input type="submit" name = "submit" value = "Submit Code"><br /><br />
 			</form>
 			<h4 id = "sco">Score</h4>
@@ -73,7 +73,7 @@
 </div>
 <br />
 <br />
-<form action="/contests/quespage/prob/{{CPCode}}" method="POST">
+<form action="/contests/contest/{{CCode}}/quespage/prob/{{CPCode}}" method="POST">
 	<input type="submit" name = "submit" value = "Submit Code"><br /><br />
 </form>
 
