--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -28,30 +28,7 @@
     </div>
     <br />
     <center>
-        <table class="performance" border="1px solid #000">
-        {{#if participation}}
-            <tr>
-            <th>Contest Code</th>
-            <th>Rank</th>
-            <th>oldrating</th>
-            <th>Newrating</th>
-            </tr>
         
-            {{#each userdata}}
-            <td>{{this.code}}</td>
-            <td>{{this.rank}}</td>
-            <td>{{this.oldrating}}</td>
-            <td>{{this.newrating}}</td>
-            {{/each}}
-        {{else}}
-            <br />
-            <br />
-            No Contest Participation data
-        {{/if}}
-        </table>
-    
-        <br />
-        <br />
         <div class="container" style="margin-top:20px">
           <div class="row">
             <div class="col-sm-6">
@@ -76,5 +53,110 @@
         </div>
     </center>
 
+  <div id="performancetable">
+    <center>
+      <img src="/image-asset.gif" />
+    </center>
+  </div>
+   
+
 </div>
+
+<div class="container" style="width:80%;margin-bottom:100px;margin-top:100px">
+  <canvas id="chart"></canvas>
+</div>
+
+<script src="/js/chart.js"></script>
+
+
+
+
+<script>
+  $(document).ready(() => {
+
+    $.ajax({
+      url: '/users/performancetable/{{username}}',
+      success: (res) => {
+        
+        var pt = $("#performancetable");
+        pt.html('');
+        var data = res.data;
+        if(data.length > 0){
+          
+          var toadd = "";
+          var rating = [], ratings = [], minrating = 9999999, maxrating = -9999999;
+
+          for(var i=0;i<data.length;i++){
+            
+            toadd+='<tr>';
+            toadd+='<td>'+data[i].code+'</td>';
+            toadd+='<td>'+data[i].rank+'</td>';
+            toadd+='<td>'+data[i].oldrating+'</td>';
+            toadd+='<td>'+data[i].newrating+'</td>';
+            toadd+='</tr>';
+            if(i == 0){
+              rating.push(data[i].oldrating);  
+              ratings.push((data[i].oldrating).toString());
+              minrating = Math.min(minrating, data[i].oldrating);
+              maxrating = Math.max(maxrating, data[i].oldrating);
+            }
+            rating.push(data[i].newrating);
+            minrating = Math.min(minrating, data[i].newrating);
+            maxrating = Math.max(maxrating, data[i].newrating);
+            ratings.push((data[i].newrating).toString());
+          }
+          var ctx = document.getElementById('chart');
+          var myChart = new Chart(ctx, {
+              type: 'line',
+              data: {
+                  labels: ratings,
+                  datasets: [{
+                      label: 'Rating',
+                      data: rating,
+                      backgroundColor: 'rgba(52, 58, 64, 0.5)',
+                      borderColor: 'rgba(52, 58, 64, 0.5)',
+                      borderWidth: 3,
+                      fill: false,
+                      lineTension: 0,
+                      pointHoverBackgroundColor: 'green'
+                  }]
+              },
+              options: {
+                  scales: {
+                      yAxes: [{
+                          
+                          ticks: {
+                              
+                              suggestedMin: Math.max(0, minrating-100),
+                              suggestedMax: maxrating+100
+                              
+                          }
+                      }],
+                      xAxes: [{
+                          display: false
+                      }]
+                  }
+              }
+          });
+
+          pt.append('<center>\
+            <table class="performance" border="1px solid #000">\
+              <tr>\
+                <th>Contest Code</th>\
+                <th>Rank</th>\
+                <th>oldrating</th>\
+                <th>Newrating</th>\
+              </tr>'
+              +
+              toadd
+              +
+            '</table>\
+          </center>');
+        } else {
+          pt.append("<center style='margin:20px'><b>No participation data</b></center>");
+        }
+      }
+    })
+  })
+</script>
 
