--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -119,49 +119,26 @@
         </button>
       </div>
     </div>
-    <div id="edit" style="margin:20px;">
-  </div>
-  <input type="hidden" name="code" id="code" value="{{code}}">
-  <input type="hidden" name="lang" id="lang" value="{{flang}}">
-  <div id="demo"></div>
+    <div id="edit" style="margin:20px;"></div>
+    <input type="hidden" name="code" id="code" value="{{code}}">
+    <input type="hidden" name="lang" id="lang" value="{{flang}}">
+    <div id="demo"></div>
   </div>
  
   
-
-  <center>
-    <table class="performance" border="1px solid #000">
-      {{#if participation}}
-        <tr>
-          <th>Contest Code</th>
-          <th>Rank</th>
-          <th>oldrating</th>
-          <th>Newrating</th>
-        </tr>
-      
-        {{#each ratingdata}}
-          <td>{{this.code}}</td>
-          <td>{{this.rank}}</td>
-          <td>{{this.oldrating}}</td>
-          <td>{{this.newrating}}</td>
-        {{/each}}
-      {{else}}
-        <br />
-        <br />
-        No Contest Participation data
-      {{/if}}
-    </table>
-  </center>
+  <div id="performancetable">
+    <center>
+      <img src="/image-asset.gif" />
+    </center>
+  </div>
    
 
 </div>
-
-
-
-
+<div class="container" style="width:80%;margin-bottom:100px;margin-top:100px">
+  <canvas id="chart"></canvas>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ext-themelist.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/mode-c_cpp.min.js" type="text/javascript" charset="utf-8"></script>
@@ -169,10 +146,99 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ext-modelist.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/ace/src/ace.js"></script>
 <script src="/ace/src/ext-modelist.js"></script>
+<script src="/js/chart.js"></script>
 
 
 <script>
-  var edit = () =>{
+
+  $(document).ready(() => {
+
+    $.ajax({
+      url: '/users/performancetable/{{username}}',
+      success: (res) => {
+        
+        var pt = $("#performancetable");
+        pt.html('');
+        var data = res.data;
+        if(data.length > 0){
+          
+          var toadd = "";
+          var rating = [], ratings = [], minrating = 9999999, maxrating = -9999999;
+
+          for(var i=0;i<data.length;i++){
+            
+            toadd+='<tr>';
+            toadd+='<td>'+data[i].code+'</td>';
+            toadd+='<td>'+data[i].rank+'</td>';
+            toadd+='<td>'+data[i].oldrating+'</td>';
+            toadd+='<td>'+data[i].newrating+'</td>';
+            toadd+='</tr>';
+            if(i == 0){
+              rating.push(data[i].oldrating);  
+              ratings.push((data[i].oldrating).toString());
+              minrating = Math.min(minrating, data[i].oldrating);
+              maxrating = Math.max(maxrating, data[i].oldrating);
+            }
+            rating.push(data[i].newrating);
+            minrating = Math.min(minrating, data[i].newrating);
+            maxrating = Math.max(maxrating, data[i].newrating);
+            ratings.push((data[i].newrating).toString());
+          }
+          var ctx = document.getElementById('chart');
+          var myChart = new Chart(ctx, {
+              type: 'line',
+              data: {
+                  labels: ratings,
+                  datasets: [{
+                      label: 'Rating',
+                      data: rating,
+                      backgroundColor: 'rgba(52, 58, 64, 0.5)',
+                      borderColor: 'rgba(52, 58, 64, 0.5)',
+                      borderWidth: 3,
+                      fill: false,
+                      lineTension: 0,
+                      pointHoverBackgroundColor: 'green'
+                  }]
+              },
+              options: {
+                  scales: {
+                      yAxes: [{
+                          
+                          ticks: {
+                              
+                              suggestedMin: Math.max(0, minrating-100),
+                              suggestedMax: maxrating+100
+                              
+                          }
+                      }],
+                      xAxes: [{
+                          display: false
+                      }]
+                  }
+              }
+          });
+
+          pt.append('<center>\
+            <table class="performance" border="1px solid #000">\
+              <tr>\
+                <th>Contest Code</th>\
+                <th>Rank</th>\
+                <th>oldrating</th>\
+                <th>Newrating</th>\
+              </tr>'
+              +
+              toadd
+              +
+            '</table>\
+          </center>');
+        } else {
+          pt.append("<center style='margin:20px;'><b>No participation data</b></center>");
+        }
+      }
+    })
+  })
+
+  var edit = () => {
     document.getElementById("ledit").innerHTML="";
 
     document.getElementById("edit").innerHTML='<select class="selectpicker" data-live-search="true" class="form-control" name="Language" id="mode" onchange="changeMode()">              <option value="C" id="C" selected>C</option>              <option value="C++" id="C++">C++</option>              <option value="Java" id="Java">Java</option>              <option value="Python" id="Python">Python</option>  </select><div id="editor" style="border: solid lightblue;" name="editor" ></div> ';
@@ -181,53 +247,53 @@
     var code=document.getElementById("code").value;
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/xcode");
-     editor.setOptions({
+    editor.setOptions({
     enableBasicAutocompletion: true,
     enableSnippets: true
-});
-    editor.setShowPrintMargin(false);
+  });
+
+  editor.setShowPrintMargin(false);
     if(flang){
     document.getElementById(flang).setAttribute("selected","true");
       if(flang=='C'||flang=="C++"){
-           editor.session.setMode("ace/mode/c_cpp");
-           editor.clearSelection();
-      }else if(flang=="Java"){
+        editor.session.setMode("ace/mode/c_cpp");
+        editor.clearSelection();
+      } else if(flang=="Java") {
         editor.session.setMode("ace/mode/java");
         editor.clearSelection();
-      }else if(flang=="Python"){
+      } else if(flang=="Python") {
         editor.session.setMode("ace/mode/python3");
         editor.clearSelection();
       }        
-    }else{
+    } else {
       editor.session.setMode("ace/mode/c_cpp");
       editor.clearSelection();
     }
     editor.setValue(code);
-    
-    
   }
 
   function editsave() {
     if(confirm("Do you want to change your template?")){
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/xcode");
-    editor.setShowPrintMargin(false);
-    	var xx = document.getElementById("mode");
-    var y = xx.options[xx.selectedIndex].value;
-          var x=editor.getSession().getValue();
-         document.getElementById("lang").value=y;
-         document.getElementById("code").value=x;
-          $.post("/users/edittemp", {flang:y , template:x});
-          document.getElementById("edit").innerHTML="";
-          document.getElementById("demo").innerHTML="";
-          document.getElementById("ledit").innerHTML='<button id="tedit" onclick="edit()" type="submit" style="color:#fff;width:100%;text-decoration:none;">          <div class = "card bg-dark text-center">            <div class="card-body">              Edit Template            </div>          </div>        </button>';
-          alert("Your template changed!!!");
-          }else{
-            document.getElementById("edit").innerHTML="";
-          document.getElementById("demo").innerHTML="";
-          document.getElementById("ledit").innerHTML='<button id="tedit" onclick="edit()" type="submit" style="color:#fff;width:100%;text-decoration:none;">          <div class = "card bg-dark text-center">            <div class="card-body">              Edit Template            </div>          </div>        </button>';
-          alert("Template not changed!!!");
-          }
+      var editor = ace.edit("editor");
+      editor.setTheme("ace/theme/xcode");
+      editor.setShowPrintMargin(false);
+      var xx = document.getElementById("mode");
+      var y = xx.options[xx.selectedIndex].value;
+      var x=editor.getSession().getValue();
+      document.getElementById("lang").value=y;
+      document.getElementById("code").value=x;
+      $.post("/users/edittemp", {flang:y , template:x});
+      
+      document.getElementById("edit").innerHTML="";
+      document.getElementById("demo").innerHTML="";
+      document.getElementById("ledit").innerHTML='<button id="tedit" onclick="edit()" type="submit" style="color:#fff;width:100%;text-decoration:none;">          <div class = "card bg-dark text-center">            <div class="card-body">              Edit Template            </div>          </div>        </button>';
+      alert("Your template changed!!!");
+    } else {
+      document.getElementById("edit").innerHTML="";
+      document.getElementById("demo").innerHTML="";
+      document.getElementById("ledit").innerHTML='<button id="tedit" onclick="edit()" type="submit" style="color:#fff;width:100%;text-decoration:none;">          <div class = "card bg-dark text-center">            <div class="card-body">              Edit Template            </div>          </div>        </button>';
+      alert("Template not changed!!!");
+    }
   }
   function cancel(){
     document.getElementById("edit").innerHTML="";
