--- a/src/views/report.handlebars
+++ b/src/views/report.handlebars
@@ -4,9 +4,39 @@
   <input  class="form-control" type="text" id="inputn" name="suba" placeholder="Subbmission id" required>
   </div>
   <div class="form-group">
-  <label class="control-label" for="inputn">Submisson Ids:</label>  
+  <label class="control-label" for="inputb">Submisson Ids:</label>  
   <input  class="form-control" type="text" id="inputb" name="subb" placeholder="Subbmission ids" required>
   </div>
   <div> Enter matched submission ids seperated by ","</div>
    <button class="btn btn-outline-secondary" type="submit">Report</button>
+
+   
 </form>
+<br><br><br><br>
+<div id = "substatus"></div>
+<div class="form-group">
+  <label class="control-label" for="checksub" >Check Submission existence:</label>  
+  <input  class="form-control" type="text" id="checksub" name="sub" placeholder="Subbmission ids">
+</div>
+<div class="btn btn-primary" onclick="func()"> Check</div>
+
+<script>
+  var func = function(){ 
+    
+    $("#substats").html('');
+    $("#substats").html("<img src='/roll.gif' width='50px' height='50px' />");
+    var x=document.getElementById("checksub").value;
+    $.get("/users/checksubmissions/"+x, function(data, status) {
+      if(data=="true"){
+        $("#substats").html('');
+        document.getElementById("substatus").innerHTML="<h3> Subbmission exists</h3>";
+        document.getElementById("substatus").style.color = "green";
+      }else{
+          document.getElementById("substatus").innerHTML="<h3> Subbmission doesn't exist</h3>";
+        document.getElementById("substatus").style.color = "red";
+      }
+      console.log("Data: " + data + "\nStatus: " + status);
+      
+    });
+  }
+</script>
