--- a/src/views/partials/navcontest.handlebars
+++ b/src/views/partials/navcontest.handlebars
@@ -9,5 +9,6 @@
     <a class="navca" href="/users/submissions/{{user}}/submissions/1">Submissions</a>
 {{/if}}
 <a class="navca" href="/contests/status/1">Status</a>
+<a class="navca" href="/contests/ranklist/{{CCode}}">Ranklist</a>
 
 <hr color="black" width="100%" style="margin-left:0px" />
