--- a/src/views/prob.handlebars
+++ b/src/views/prob.handlebars
@@ -36,9 +36,7 @@
 			<br />
 		</div>
 		<div class="col-sm-3 text-center align-items-start text-dark">
-			<form action="/contests/contest/{{CCode}}/quespage/prob/{{CPCode}}" method="POST">
-				<input type="submit" name = "submit" value = "Submit Code"><br /><br />
-			</form>
+			<div class="btn btn-dark"> <a href="/contests/contest/{{CCode}}/submit/{{CPCode}}" style="color:white">Submit Code</a></div>
 			<h4 id = "sco">Score</h4>
 			<z id = "scoc"></z>
 			<br />
@@ -73,10 +71,10 @@
 </div>
 <br />
 <br />
-<form action="/contests/contest/{{CCode}}/quespage/prob/{{CPCode}}" method="POST">
-	<input type="submit" name = "submit" value = "Submit Code"><br /><br />
-</form>
 
+
+
+<div class="btn btn-dark"> <a href="/contests/contest/{{CCode}}/submit/{{CPCode}}" style="color:white">Submit Code</a></div>
 
 
 
