--- a/src/views/quespage.handlebars
+++ b/src/views/quespage.handlebars
@@ -75,7 +75,7 @@
 
 				$('#rank').html('');
 				if(res.CProblems.length>0){
-					$('#rank').append('<center><a id="ranklist" href = "/contests/contest/'+code+'/ranklist/{{CCode}}">Ranklist</a></center>')
+					$('#rank').append('<center><a id="ranklist" href = "/contests/ranklist/{{CCode}}">Ranklist</a></center>')
 				}
             }
         })
